--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["HCS", "api server"],
+  "keywords": [
+    "HCS",
+    "api server"
+  ],
   "author": "Jeff Kranenburg",
   "license": "ISC",
   "description": "",
@@ -17,10 +20,16 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-basic-auth": "^1.2.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.0",
+    "js-base64": "^3.7.7",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "nocodb-sdk": "^0.251.1",
     "nodemon": "^3.1.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-themes": "^1.4.3",
     "swagger-ui-express": "^5.0.1",
