moved markdown folder

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NOCO_TOKEN="-IqL6Cn6y9StMikGC0r6EcZ6HlGXcIM5Fg7eL6YR"
 NOCO_URL="https://noco.hcs.net.nz"
-NOCO_URL_DATA="/api/v1/db/data/v1"
-NOCO_URL_TABLE="/api/v2/tables"
+NOCO_URL_DATA="api/v1/db/data/v1"
+NOCO_URL_TABLE="api/v2/tables"
 
 PROXY_PASS=1
 PORT=5000
