--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "gdev": "nodemon gserver.js"
   },
   "keywords": [
     "HCS",
@@ -22,6 +23,8 @@
     "express-basic-auth": "^1.2.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
+    "graphql": "^16.10.0",
+    "graphql-http": "^1.22.4",
     "js-base64": "^3.7.7",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -30,6 +33,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "ruru": "^2.0.0-beta.19",
     "swagger-jsdoc": "^6.2.8",
     "swagger-themes": "^1.4.3",
     "swagger-ui-express": "^5.0.1",
